# ai-architecture

./: .gitignore  ARCHAI_DESIGN.md  ARCHAI_PILOT_DISTRIBUTION.md  LICENSE  README.md  archai.py  archai_config.yaml  mkdocs.yml  package.json  pyproject.toml  requirements-docs.txt  requirements.txt  vercel.json
.github/workflows/: build_binaries.yml  pilot-dist.yml
ai_architect/: api.py  cli.py  version.py
ai_architect/analysis/: graph_engine.py  validator.py
ai_architect/api/: auth.py
ai_architect/connectors/: github.py  google_drive.py  pm.py
ai_architect/core_ai/: auditor.py  generator.py  orchestrator.py  prompts.py
ai_architect/data/: db_client.py  models.py  orm.py
ai_architect/evaluations/: runner.py
ai_architect/improvement_engine/: analyzer.py  planner.py  strategies.py
ai_architect/infrastructure/: caching.py  config_manager.py  encryption.py  globals.py  logging_utils.py  monitoring.py  persistence.py  security.py  usage_tracker.py
ai_architect/models/: base.py  factory.py  ollama_model.py
ai_architect/reconciler/: logic.py
ai_architect/utils/: console_utils.py  license.py  ollama_manager.py
ai_architect/xai/: explainer.py
dashboard/: app.js  index.html  style.css
dist_pilot/: PILOT_GUIDE.md
docs/: index.md
docs/api/: endpoints.md  json-schemas.md
docs/architecture/: ciras.md  github-integration.md  pm-integration.md  src-rs.md  wdp-tg.md
docs/cli/: commands.md  examples.md
scripts/: build_pilot_bundle.py  distribute.py  distribute.sh  generate_token.py
tests/: test_agents.py  test_config.py  test_decoupling.py
(+5 files in other folders)
